--- a/hero.css
+++ b/hero.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   box-sizing: border-box;
 }
-ul{
+.nav-item{
   list-style: none;
   display: flex;
   gap: 44px;
@@ -33,6 +33,12 @@ ul{
 .color-2{
   color: rgb(255, 255, 255)
 }
+.color-3{
+  color: rgba(19, 19, 24, 0.7);
+}
+.color-4{
+  color: rgb(90, 90, 93);
+}
 /* Color one */
 #color-one{
     background-color: rgb(255, 84, 0);
@@ -41,7 +47,7 @@ ul{
 .section-one{
   background-image: url(Images/Group\ 13\ \(1\)\ \(1\).png);
   background-position: center;
-  width: 90%;
+  width: 350px;
   height: 483px;
   margin: 0 auto;
   display: block;
@@ -80,7 +86,45 @@ ul{
     font-weight: 400;
     padding-left: 10px;
 }
-
+/* section two */
+.section-two-box-one{
+  width: 335px;
+  margin: 0 auto;
+}
+.section-two-list{
+  margin-left: 15px;
+  margin-bottom: 16px;
+  & li{
+    margin-bottom: 12px;
+    margin-top: 16px;
+    color: rgba(19, 19, 24, 0.7);
+    font-size: 14px;
+  }
+}
+.section-two-title{
+  margin-top: 24px;
+  margin-bottom: 16px;
+}
+.btn-two{
+  border-radius: 8px;
+  background: rgb(255, 84, 0);
+  width: 174px;
+  height: 52px;
+  border: none;
+  margin-top: 24px;
+  color: white;
+  font-size: 20px;
+  font-weight: 800;
+}
+.section-two-box-two{
+  display: flex;
+  & img{
+    width: 335px;
+    height: 342px;
+    margin: 0 auto;
+    margin-top: 24px;
+  }
+}
 /* responsive */
 @media only screen and (min-width: 850px) {
   /* navbar styles */
@@ -92,7 +136,7 @@ ul{
   .fa-solid{
     display: none;
   }
-  ul{
+  .nav-item{
     display: unset;
     list-style: none;
     display: flex;
@@ -140,5 +184,30 @@ ul{
     width: 174px;
     height: 52px;
     margin: 0 24px;
+  }
+  /* section two */
+  .section-two{
+    display: flex;
+    justify-content: center;
+    gap: 53px;
+    margin-top: 100px;
+    height: 470px;
+    & .section-two-box-one{
+      width: 577px;
+      margin: 0;
+    }
+    & .section-two-box-two{
+      width: 540px;
+      height: 470px;
+    }
+    .section-two-title{
+      font-size: 40px;
+      font-weight: 800;
+      margin-bottom: 24px;
+    }
+    .section-two-description{
+      margin-bottom: 32px;
+      margin-top: 24px;
+    }
   }
 }
