--- a/hero.css
+++ b/hero.css
@@ -50,6 +50,7 @@ body {
 /* section one style */
 .section-one {
   background-image: url(Images/Group\ 13\ \(1\)\ \(1\).png);
+  filter: brightness(92%);
   background-position: center;
   width: 350px;
   height: 483px;
@@ -129,6 +130,7 @@ select {
     height: 342px;
     margin: 0 auto;
     margin-top: 24px;
+    filter: brightness(70%);
   }
 }
 /* section 3 styles */
@@ -144,15 +146,31 @@ select {
     padding-bottom: 16px;
   }
 }
-.section-three-box-two{
+ /* your destination */
+.row-one, .row-two, .row-three{
   width: 335px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
   margin: 0 auto;
+  gap: 16px;
+}
+.row-one{
   margin-top:45px;
+}
+.country-card{
+  position: relative;
   & img{
+    width: 100%;
     height: 176px;
+    filter: brightness(70%);
+  }
+  & p{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    color: white;
+    font-size: 1.2rem;
+    transform: translate(-50%,-50%);
   }
 }
 /* responsive */
@@ -239,4 +257,28 @@ select {
       margin-top: 24px;
     }
   }
+  /* section three */
+  .section-three{
+    display: flex;
+    flex-direction: column;
+    margin-top: 100px;
+  }
+  .section-three-box-one{
+    width: 643px;
+    height: 126px;
+    margin: 0 auto;
+    & h3{
+      width: 478px;
+      height: 50px;
+      font-size: 40px;
+      margin: 0 auto;
+      margin-bottom: 24px;
+    }
+    & p{
+      width: 643px;
+      height: 52px;
+      margin: 0 auto;
+    }
+  }
+
 }
