added html and css code

--- a/hero.css
+++ b/hero.css
@@ -288,11 +288,13 @@ select {
     justify-content: center;
     align-items: center;
     & img{
-      width: 35rem;
+      width: 28rem;
       height: 300px;
     }
   }
-  .row-one ,.row-two, .row-three{
+  .row-one ,
+  .row-two, 
+  .row-three{
     display: grid;
     grid-template-columns: 1fr 1fr;
     justify-content: center;
@@ -302,6 +304,6 @@ select {
     grid-template-columns: 0.8fr 0.5fr 0.7fr;
   }
   .row-three img{
-    grid-template-columns: repeat(0.75fr 1.25fr);
+    grid-template-columns: 0.75fr 1.25fr;
   }
 }
