added html and css code

--- a/hero.css
+++ b/hero.css
@@ -152,7 +152,9 @@ select {
   display: flex;
   flex-direction: column;
   margin: 0 auto;
-  gap: 16px;
+  & img{
+    margin-top: 16px;
+  }
 }
 .row-one{
   margin-top:45px;
@@ -261,6 +263,8 @@ select {
   .section-three{
     display: flex;
     flex-direction: column;
+    min-width: 900px;
+    margin: 0 auto;
     margin-top: 100px;
   }
   .section-three-box-one{
@@ -284,26 +288,13 @@ select {
     width: 73rem;
     margin: 0 auto;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .row-one{
+    display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    & img{
-      width: 28rem;
-      height: 300px;
-    }
-  }
-  .row-one ,
-  .row-two, 
-  .row-three{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    margin-top: 1rem;
-}
-  .row-two {
-    grid-template-columns: 0.8fr 0.5fr 0.7fr;
-  }
-  .row-three img{
-    grid-template-columns: 0.75fr 1.25fr;
   }
 }
