--- a/hero.css
+++ b/hero.css
@@ -287,14 +287,36 @@ select {
   .section-three-box-two{
     width: 73rem;
     margin: 0 auto;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
   }
   .row-one{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     flex-direction: column;
+    grid-template-columns: 1fr 1fr;
+    width: 73rem;
+    /* margin: 0; */
+    & img {
+      width: 95%;
+      height: 300px;
+    }
+  }
+  .row-two{
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: 0.8fr 1.5fr 0.7fr;
+    width: 73rem;
+    & img {
+      width: 95%;
+      height: 300px;
+    }
+  }
+  .row-three{
+    display: grid;
+    flex-direction: column;
+    grid-template-columns: 0.75fr 1.25fr;
+    width: 73rem;
+    & img {
+      width: 95%;
+      height: 300px;
+    }
   }
 }
