section four responsive

--- a/hero.css
+++ b/hero.css
@@ -198,6 +198,7 @@ select {
   background: rgba(251, 181, 99, 0.05);
   display: flex;
   align-items: center;
+  margin-top: 40px;
 }
 .section-four-outer-two{
   border: 1px solid rgba(41, 206, 246, 0.2);
