--- a/hero.css
+++ b/hero.css
@@ -225,7 +225,57 @@ select {
     font-size: 3rem;
   }
 }
+/* section five */
+.section-five{
 
+  & .section-three-box-one{
+    width: 309px;
+    height: 113px;
+    margin: 0 auto;
+  }
+}
+.hotel-one{
+  background-image: url(Images/Group\ 39.png);
+  width: 335px;
+  height: 500px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  & .hotel-poster{
+    width: 303px;
+    height: 297px;
+    margin: 0 auto;
+    border: 2px solid rgb(255, 255, 255);
+    border-radius: 16px;
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.8);
+    display: flex;
+    align-items: center;
+    & .inner-poster{
+      width: 255px;
+      height: 249px;
+      margin: 0 auto;
+      & div{
+        width: 218px;
+        height: 64px;
+        margin-bottom: 1rem;
+        & div{
+          display: flex;
+          justify-content: space-between;
+          margin-top: 20px;
+        }
+      }
+    }
+  }
+}
+.btn-three{
+  width: 130px;
+  height: 40px;
+  border-radius: 8px;
+  background: rgb(255, 84, 0);
+  border: none;
+  margin-top: 1rem;
+}
 /* responsive */
 @media only screen and (min-width: 850px) {
   /* navbar styles */
